--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>medguide-pill-pal</title>
+    <title>medguide-pill-Tracker</title>
     <meta name="description" content="Mayank  Project" />
     <meta name="author" content="Mayank" />
 
